--- a/MyFilm/App.xaml
+++ b/MyFilm/App.xaml
@@ -4,19 +4,20 @@
              xmlns:local="clr-namespace:MyFilm"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        
+
         <Style x:Key="ButtonStyle1"  TargetType="Button">
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Background" Value="#2a2827"/>
-            <Setter Property="BorderBrush" Value="#e3a30e"/>
-            <Setter Property="BorderThickness" Value="4"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="6"/>
             <Setter Property="Height" Value="56"/>
-            <Setter Property="Width" Value="190"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Width" Value="220"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontWeight" Value="ExtraBold"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
-            
+            <Setter Property="FontFamily" Value="/MyFilm;component/Fonts/Pacifico-Regular.ttf#Pacifico"/>
+
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -31,41 +32,58 @@
             
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="White"/>
-                    <Setter Property="Foreground" Value="Black"/>
-                    <Setter Property="BorderBrush" Value="#1ca6e8"/>
+                    <Setter Property="Background" Value="#9fa1f1"/>
+                    <Setter Property="BorderBrush" Value="#2b2fe9"/>
                 </Trigger>
                 </Style.Triggers>
         </Style>
             
         <Style x:Key="TextBlockStyle1" TargetType="TextBlock">
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontWeight" Value="ExtraBold"/>
+            <Setter Property="FontFamily" Value="/MyFilm;component/Fonts/Pacifico-Regular.ttf#Pacifico"/>
         </Style>
 
         <Style x:Key="TextBoxStyle1" TargetType="TextBox">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="BorderBrush" Value="#e3a30e"/>
-            <Setter Property="BorderThickness" Value="4"/>
+            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="6"/>
             <Setter Property="Padding" Value="12"/>
             <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Height" Value="55"/>
+            <Setter Property="Height" Value="70"/>
             <Setter Property="Width" Value="370"/>
-            <Setter Property="FontSize" Value="19"/>
+            <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontFamily" Value="/MyFilm;component/Fonts/Pacifico-Regular.ttf#Pacifico"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#c5c9f5"/>
+                    <Setter Property="BorderBrush" Value="#2b2fe9"/>
+                </Trigger>
+            </Style.Triggers>
+
         </Style>
 
         <Style x:Key="TextBoxStyle2" TargetType="TextBox">
             <Setter Property="Background" Value="White"/>
-            <Setter Property="BorderBrush" Value="#e3a30e"/>
-            <Setter Property="BorderThickness" Value="4"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="5"/>
             <Setter Property="Padding" Value="12"/>
             <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Height" Value="55"/>
+            <Setter Property="Height" Value="65"/>
             <Setter Property="Width" Value="350"/>
-            <Setter Property="FontSize" Value="19"/>
+            <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontFamily" Value="/MyFilm;component/Fonts/Pacifico-Regular.ttf#Pacifico"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#c5c9f5"/>
+                    <Setter Property="BorderBrush" Value="#fb9b06"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
 
