--- a/MyFilm/MainWindow.xaml
+++ b/MyFilm/MainWindow.xaml
@@ -30,7 +30,19 @@
         <Button Grid.Column="1"
                 Style="{StaticResource ButtonStyle1}"
                 Content="Вход"  
-                Margin="10,364,0,0" HorizontalAlignment="Left" Grid.RowSpan="2"/>
+                Margin="10,364,0,0" HorizontalAlignment="Left" Grid.RowSpan="2" 
+                Click="Button_Click_Enter"/>
+
+        <Button Grid.Column="1"
+                Style="{StaticResource ButtonStyle1}"
+                Content="Выход" 
+                Grid.Row="1" Click="Button_Click_Exit" HorizontalAlignment="Left" Margin="10,109,0,0"/>
+
+        <Button Grid.Column="2"
+                Style="{StaticResource ButtonStyle1}"
+                Content="Контакты" 
+                Grid.Row="1" HorizontalAlignment="Left" Margin="140,109,0,0" 
+                Click="Button_Click_URL"/>
 
         <TextBox Grid.Column="1" 
                  Style="{StaticResource TextBoxStyle1}"
@@ -63,15 +75,13 @@
                  VerticalAlignment="Top"  
                  Grid.ColumnSpan="2"/>
 
-        <Button Grid.Column="1"
-                Style="{StaticResource ButtonStyle1}"
-                Content="Выход" 
-                Grid.Row="1" Click="Button_Click_Exit" HorizontalAlignment="Left" Margin="10,109,0,0"/>
-
-        <Button Grid.Column="2"
-                Style="{StaticResource ButtonStyle1}"
-                Content="Контакты" 
-                Grid.Row="1" HorizontalAlignment="Left" Margin="140,109,0,0"/>
+        <TextBlock Grid.Column="1"
+                   x:Name="errorText"
+                   Style="{StaticResource TextBlockStyle1}" 
+                   HorizontalAlignment="Left" 
+                   Margin="204,314,0,0" 
+                   TextWrapping="Wrap" 
+                   VerticalAlignment="Top" Grid.ColumnSpan="2" Width="370"/>
 
 
         <Image Source="/MyFilm;component/Picture/127.ico" 
