--- a/MyFilm/RegisterWindow.xaml
+++ b/MyFilm/RegisterWindow.xaml
@@ -184,7 +184,8 @@
 
         <ComboBox Grid.Column="2" 
                   x:Name="countryBox"
-                  ItemsSource="{Binding countryList}"
+                  ItemsSource="{Binding CountryList}"
+                  DisplayMemberPath="Name"
                   Text="{Binding User.Country, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                   HorizontalAlignment="Left" 
                   Margin="10,277,0,0" 
