--- a/MyFilm/App.xaml
+++ b/MyFilm/App.xaml
@@ -86,6 +86,29 @@
             </Style.Triggers>
         </Style>
 
+        <Style x:Key="TextPasswordBox" TargetType="PasswordBox">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="6"/>
+            <Setter Property="Padding" Value="12"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Height" Value="70"/>
+            <Setter Property="Width" Value="370"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontFamily" Value="/MyFilm;component/Fonts/Pacifico-Regular.ttf#Pacifico"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#c5c9f5"/>
+                    <Setter Property="BorderBrush" Value="#fb9b06"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+
+
+
 
     </Application.Resources>
 </Application>
