--- a/MyFilm/CollectionWindow.xaml
+++ b/MyFilm/CollectionWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyFilm"
         Background="#f4aa0b"
-        Title="MainWindow" Height="800" Width="1600"  WindowState="Maximized">
+        Title="Моя коллекция" Height="800" Width="1600"  WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition ></RowDefinition>
@@ -29,7 +29,17 @@
         <Button Grid.Column="1"
                 Style="{StaticResource ButtonStyle1}"
                 Content="Выйти в меню" 
-                Margin="257,10,0,0" Click="Button_Click_Exit" HorizontalAlignment="Left" Grid.Row="1"/>
+                Margin="257,76,0,0" Click="Button_Click_Exit" HorizontalAlignment="Left" Grid.Row="1"/>
+
+        <Button Grid.Column="1"
+                Style="{StaticResource ButtonStyle1}"
+                Content="Очистить все данные" 
+                Margin="10,76,0,0" Click="Button_Click_CleanAll" HorizontalAlignment="Left" Grid.Row="1"/>
+
+        <Button Grid.Column="1"
+                Style="{StaticResource ButtonStyle1}"
+                Content="Удалить" 
+                Margin="257,10,0,0" Click="Button_Click_Delete" HorizontalAlignment="Left" Grid.Row="1"/>
 
         <ListBox Grid.Column="1" 
                  x:Name="listBoxFilm" 
@@ -44,7 +54,7 @@
                HorizontalAlignment="Left" 
                Height="622" Margin="10,10,0,0" 
                VerticalAlignment="Top"
-               Width="484" Grid.RowSpan="2"/>
+               Width="465" Grid.RowSpan="2"/>
 
         <TextBlock Grid.Column="2"
                    x:Name="textReleaseBlock"
@@ -67,7 +77,16 @@
                    Style="{StaticResource TextBlockStyle1}" 
                    HorizontalAlignment="Center" 
                    TextWrapping="Wrap" 
-                   VerticalAlignment="Top" Width="494" Height="749" Margin="0,10,0,0" Grid.RowSpan="2"/>
+                   VerticalAlignment="Top" Width="464" Height="749" Margin="0,10,0,0" Grid.RowSpan="2"/>
+
+        <TextBlock Grid.Column="1"
+                   x:Name="textError"
+                   Style="{StaticResource TextBlockStyle1}" 
+                   HorizontalAlignment="Center" 
+                   Margin="0,148,0,0" 
+                   TextWrapping="Wrap"  
+                   VerticalAlignment="Top" Width="374" Height="140" Grid.Row="1"/>
+
 
 
 
